# sensor

./: .gitignore  README.md
picow_sensor/: CMakeLists.txt
picow_sensor/src/: picow_tcp_client.c  wifi_credentials.h
